Add meta data to the head and connect the css style sheet

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
+    <meta name="description"
+        content="Information about education, skills, ability and experience of Anjalee Kulasinghe as a potential employee.">
+    <meta name="keywords" content="anjalee kulasinghe, cv, skill, education, experiance">
+    <meta name="author" content="Anjalee Kulasinghe">
+
+    <link rel="stylesheet" href="/assets/css/style.css">
+
+    <title>CV_AK</title>
+
 </head>
 <body>
-    
+    <h1>Anjalee Kulasinghe</h1>
 </body>
 </html>
