Add the core structure to the home page

--- a/index.html
+++ b/index.html
@@ -16,5 +16,26 @@
 </head>
 <body>
     <h1>Anjalee Kulasinghe</h1>
+
+    <header>Header content</header>
+
+    <section>
+        Home: main information with image
+    </section>
+    <section>
+        Experiance
+    </section>
+    <section>
+        Education
+    </section>
+    <section>
+        Skills and Expertise
+    </section>
+    <section>
+        Contact details with social media links
+    </section>
+    <footer>
+        copyright by Anjalee Kulasinghe
+    </footer>
 </body>
 </html>
