Add content and style to Experiance and footer sections.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,28 +15,122 @@
     <title>CV_AK</title>
 
 </head>
+
 <body>
-    <h1>Anjalee Kulasinghe</h1>
+    <header>
+        <a href="index.html">
+            <img src="/assets/images/LOGO_AK.jpg" alt="logo" id="logo">
+        </a>
 
-    <header>Header content</header>
+        <nav class="navigation">
+            <ul id="menu">
+                <li>
+                    <a href="#home" aria-label="Go to the top of the page">Home</a>
+                </li>
+                <li>
+                    <a href="#experiance" aria-label="Go to the experiance section">Experiance</a>
+                </li>
+                <li>
+                    <a href="#education" aria-label="Go to the education section">Education</a>
+                </li>
+                <li>
+                    <a href="#skills" aria-label="Go to the skills section">Skills</a>
+                </li>
+                <li>
+                    <a href="#contact" aria-label="Go to the contact section">Contact</a>
+                </li>
+                <li>
+                    <a href="download.html">Download CV</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    <section>
-        Home: main information with image
+    <section id="home">
+        <div>
+            <img src="/assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
+        </div>
+        <div id="welcome">
+            <p>Hey there! My name is <br>
+                <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> <br>
+                or you can call me <br>
+                <strong style="color: #331D2C;"> ANJI </strong><br>
+                I am a Business Expert and <br>
+                a Scrum Master at H&M Group. <br>
+                ... and I am just a human<br>
+                who likes to enjoy life!
+            </p>
+        </div>
     </section>
-    <section>
-        Experiance
+
+    <section id="experiance">
+        <h1>Experiance</h1>
+        <div id="exp1" class="inner-box">
+            <h2><strong>Expert & Scrum Master</strong></h2>
+            <h2>H&M Group - Stockholm, Sweden</h2>
+            <h3>May 2021 - Present</h3>
+            <hr>
+
+            <p>Replenishment Precision is a product under Inventory optimization (SAP ECC module). The product ensures
+                stock availability in store at the right time and place while helping to increase revenue by focusing on
+                full-price selling. </p><br>
+            <ul>
+                <li>Creating business case, solving complex problems, requirement gathering and facilitating design
+                    thinking in supporting
+                    the team to understand business needs, leading to a better product.</li>
+                <li>Guide the team and connect the stakeholders throughout developments. Building the bridge between
+                    business and tech to
+                    ease out communication and functional bottlenecks.</li>
+                <li>Responsible for creating the release notes related to the Replenishment product.</li>
+                <li>Single Point Of Contact: When lanching the system to new markets. Organized and conduct the monthly
+                    superuser forum to
+                    stay close contact with the end users and stakeholders.</li>
+                <li>Collaborating with the product owner on defining product strategy and roadmap.</li>
+            </ul>
+        </div>
+
+        <div id="exp2" class="inner-box"></div>
+        <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
+        <h2>H&M - Stockholm, Sweden</h2>
+        <h3>December 2018 - May 2021</h3>
+        <hr>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <div id="exp3" class="inner-box"></div>
+        <h2><strong>Lecture & Head teacher</strong></h2>
+        <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
+        <h3>January 2009 - August 2017</h3>
+        <hr>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </section>
-    <section>
-        Education
+
+    <section id="education">
+        <h1><strong>Education</strong></h1>
     </section>
-    <section>
-        Skills and Expertise
+
+    <section id="skills">
+        <h1><strong>Skills and Expertise</strong></h1>
     </section>
-    <section>
-        Contact details with social media links
+
+    <section id="contact">
+        <h1><strong>Contact</strong></h1>
     </section>
-    <footer>
-        copyright by Anjalee Kulasinghe
+
+    <footer class="text-uppercase">
+        <p>Copyright © by Anjalee Kulasinghe 2023</p>
     </footer>
 </body>
+
 </html>
