Add font awesome icons to the each section heading

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </section>
 
     <section id="experiance">
-        <h1>Experiance</h1>
-        <div id="exp1" class="inner-box">
+        <h1>Experiance <i class="fa-solid fa-briefcase"></i></h1>
+        <div id="exp1" class="inner-box float-left">
             <h2><strong>Expert & Scrum Master</strong></h2>
             <h2>H&M Group - Stockholm, Sweden</h2>
             <h3>May 2021 - Present</h3>
@@ -117,20 +117,23 @@
     </section>
 
     <section id="education">
-        <h1><strong>Education</strong></h1>
+        <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
     </section>
 
     <section id="skills">
-        <h1><strong>Skills and Expertise</strong></h1>
+        <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
     </section>
 
     <section id="contact">
-        <h1><strong>Contact</strong></h1>
+        <h1><strong>Contact <i class="fa-solid fa-comment-dots"></i></strong></h1>
     </section>
 
     <footer class="text-uppercase">
         <p>Copyright © by Anjalee Kulasinghe 2023</p>
     </footer>
+
+    <!-- adding font awesome script -->
+    <script src="https://kit.fontawesome.com/5f838da39b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
