--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p>Replenishment Precision is a product under Inventory optimization (SAP ECC module). The product ensures
                 stock availability in store at the right time and place while helping to increase revenue by focusing on
                 full-price selling. </p><br>
-            <ul>
+            <ul class="inside">
                 <li>Creating business case, solving complex problems, requirement gathering and facilitating design
                     thinking in supporting
                     the team to understand business needs, leading to a better product.</li>
@@ -95,24 +95,46 @@
         <h3>December 2018 - May 2021</h3>
         <hr>
 
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="inside">
+            <li>Secured and optimized the best customer offering by curating site that meets commerciality, customers’
+                needs in line
+                with H&M brand. Collaborate and align with the stories and local relevant content to ensure the omni
+                channel experience.</li>
+            <li>Knowledge related to consumer behavior and did the communication targeting the proper customer group via
+                segmentation
+                (what, who and when).</li>
+            <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and supporting
+                to test the
+                functionalities of AEM. Help to create the training materials. Take part in site development projects to
+                visual
+                merchandising and user experience. Help with technical upgrade testing and testing the site (mobile,
+                desktop, app)
+                during tech release.</li>
+            <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build strong
+                action plan to meet
+                selling KPI (Using Google analytics, Power BI and Tableau).</li>
         </ul>
 
-        <div id="exp3" class="inner-box"></div>
+        <div id="exp3" class="inner-box  float-right"></div>
         <h2><strong>Lecture & Head teacher</strong></h2>
         <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
         <h3>January 2009 - August 2017</h3>
         <hr>
 
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="inside">
+            <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
+                network. Team
+                member for the panel of ICT curriculum development and exam paper preparation panel for the network from
+                Grade 1 to Grade 13 (20 colleges
+                spread throughout 8 provinces in Sri Lanka).</li>
+            <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects, including
+                programming languages, databases,
+                project management, web development and MS Office (1000+ students)</li>
+            <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops and
+                multimedia presentations, to facilitate
+                student understanding and engagement</li>
+            <li>Provided guidance and support to students in their academic and career development, offering mentorship
+                and advice on IT-related topics (200+ students. Most of them work in the IT related industry).</li>
         </ul>
     </section>
 
