--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 selling KPI (Using Google analytics, Power BI and Tableau).</li>
         </ul>
 
-        <div id="exp3" class="inner-box  float-right"></div>
+        <div id="exp3" class="inner-box"></div>
         <h2><strong>Lecture & Head teacher</strong></h2>
         <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
         <h3>January 2009 - August 2017</h3>
@@ -147,12 +147,33 @@
     </section>
 
     <section id="contact">
-        <h1><strong>Contact <i class="fa-solid fa-comment-dots"></i></strong></h1>
+        <h1><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
+        <form action="https://gmail.com" method="post" class="contact-form">
+            <fieldset>
+                <div>
+                    <label for="fname">First Name</label>
+                    <input id="fname" type="text" name="first_name" class="text-input" required>
+                </div>
+
+                <div>
+                    <label for="lname">Last Name</label>
+                    <input id="lname" type="text" name="last_name" class="text-input" required>
+                </div>
+
+                <div>
+                    <label for="email">Email Address</label>
+                    <input id="email" type="email" name="email_address" class="text-input" required>
+                </div>
+            </fieldset>
+
+            <input type="submit" value="Submit" class="send-button">
+            <input type="reset" value="Reset Form">
+        </form>
     </section>
 
-    <footer class="text-uppercase">
+    <!-- <footer class="text-uppercase">
         <p>Copyright © by Anjalee Kulasinghe 2023</p>
-    </footer>
+    </footer> -->
 
     <!-- adding font awesome script -->
     <script src="https://kit.fontawesome.com/5f838da39b.js" crossorigin="anonymous"></script>
