Add content to the Education section.

--- a/index.html
+++ b/index.html
@@ -140,6 +140,55 @@
 
     <section id="education">
         <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
+        <div id="Edu-box1" class="edu-box">
+            <ul>
+                <li><strong>Code Institute - Ireland</strong></li>
+                <li>Jul 2023 - Precent</li>
+                <ul>
+                    <li>Diploma: Full Stack Software Development</li>
+                </ul>
+            </ul>
+        </div>
+
+        <div id="Edu-box2" class="edu-box">
+            <ul>
+                <li><strong>Halmstad University - Sweden</strong></li>
+                <li>Mar 2023 - Jun 2023</li>
+                <ul>
+                    <li>Master's (one subject): AI and Data Strategy</li>
+                </ul>
+            </ul>
+        </div>
+
+        <div id="Edu-box3" class="edu-box">
+            <ul>
+                <li><strong>Stockholm University - Sweden</strong></li>
+                <li>Aug 2017 - Precent</li>
+                <ul>
+                    <li>Master's: Computer and System Science</li>
+                </ul>
+            </ul>
+        </div>
+
+        <div id="Edu-box4" class="edu-box">
+            <ul>
+                <li><strong>Cardiff Metropolitan University- UK</strong></li>
+                <li>Oct 2012 - Mar 2014</li>
+                <ul>
+                    <li>Master of Business Administration (MBA)</li>
+                </ul>
+            </ul>
+        </div>
+
+        <div id="Edu-box5" class="edu-box">
+            <ul>
+                <li><strong>SLIIT- Sri Lanka</strong></li>
+                <li>Jan 2003 - Oct 2007</li>
+                <ul>
+                    <li>Bachelor of Science (B.Sc.) in Information Technology/li>
+                </ul>
+            </ul>
+        </div>
     </section>
 
     <section id="skills">
