--- a/index.html
+++ b/index.html
@@ -195,34 +195,63 @@
         <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
     </section>
 
+    <!-- contact section start -->
     <section id="contact">
         <h1><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
-        <form action="https://gmail.com" method="post" class="contact-form">
-            <fieldset>
-                <div>
-                    <label for="fname">First Name</label>
-                    <input id="fname" type="text" name="first_name" class="text-input" required>
-                </div>
+        <!-- start the contact me form -->
+        <div class="contact-me">
+            <form action="https://gmail.com" method="post" class="contact-form">
+                <fieldset>
+                    <div>
+                        <label for="fname">First Name</label><br>
+                        <input id="fname" type="text" name="first_name" class="text-input" required><br><br>
+                    </div>
 
-                <div>
-                    <label for="lname">Last Name</label>
-                    <input id="lname" type="text" name="last_name" class="text-input" required>
-                </div>
+                    <div>
+                        <label for="lname">Last Name</label><br>
+                        <input id="lname" type="text" name="last_name" class="text-input" required><br><br>
+                    </div>
 
-                <div>
-                    <label for="email">Email Address</label>
-                    <input id="email" type="email" name="email_address" class="text-input" required>
-                </div>
-            </fieldset>
+                    <div>
+                        <label for="email">Email Address</label><br>
+                        <input id="email" type="email" name="email_address" class="text-input" required><br><br>
+                    </div>
+                </fieldset>
 
-            <input type="submit" value="Submit" class="send-button">
-            <input type="reset" value="Reset Form">
-        </form>
+                <input type="submit" value="Submit" class="send-button">
+                <input type="reset" value="Reset Form">
+            </form>
+        </div>
+        <!-- end the contact me form -->
+
+        <!-- start personal information -->
+        <div class="my-info">
+            <div id="p-img">
+                <img src="/assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="150" height="200">
+            </div>
+            <h2>Anjalee Kulasinghe</h2>
+            <h3>Business and Requirement Analysis | Business Expert | Scrum Master | Project Manager</h3>
+            <br>
+            <p>Mobile: +46 704 731 773</p>
+            <p>Email: anjaleek@gmail.com</p>
+            <br>
+
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+        </div>
+        <!-- end personal information -->
     </section>
+    <!-- contact section end -->
 
+    <!-- footer section start -->
     <!-- <footer class="text-uppercase">
         <p>Copyright © by Anjalee Kulasinghe 2023</p>
     </footer> -->
+    <!-- footer section end -->
 
     <!-- adding font awesome script -->
     <script src="https://kit.fontawesome.com/5f838da39b.js" crossorigin="anonymous"></script>
