Add comments to index.html file.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="/assets/images/LOGO_AK.jpg" alt="logo" id="logo">
+            <img src="/assets/images/LOGO_AK.jpg" alt="logo" id="logo"> <!-- logo on the top left -->
         </a>
 
+        <!-- start of top navigation -->
         <nav class="navigation">
             <ul id="menu">
                 <li>
@@ -44,11 +45,14 @@
                 </li>
             </ul>
         </nav>
+        <!-- end of top navigation -->
     </header>
 
+    <!-- start of the home section -->
     <section id="home">
         <div>
             <img src="/assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
+            <!-- image on the side -->
         </div>
         <div id="welcome">
             <p>Hey there! My name is <br>
@@ -62,7 +66,9 @@
             </p>
         </div>
     </section>
+    <!-- end of the home section -->
 
+    <!-- start of the experiance section -->
     <section id="experiance">
         <h1>Experiance <i class="fa-solid fa-briefcase"></i></h1>
         <div id="exp1" class="inner-box float-left">
@@ -96,23 +102,20 @@
         <hr>
 
         <ul class="inside">
-            <li>Secured and optimized the best customer offering by curating site that meets commerciality, customers’
-                needs in line
-                with H&M brand. Collaborate and align with the stories and local relevant content to ensure the omni
+            <li>Secured and optimized the best customer offering by curating site that meets commerciality, customers
+                needs in line with H&M brand. Collaborate and align with the stories and local relevant content to
+                ensure the omni
                 channel experience.</li>
             <li>Knowledge related to consumer behavior and did the communication targeting the proper customer group via
-                segmentation
-                (what, who and when).</li>
+                segmentation (what, who and when).</li>
             <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and supporting
-                to test the
-                functionalities of AEM. Help to create the training materials. Take part in site development projects to
-                visual
-                merchandising and user experience. Help with technical upgrade testing and testing the site (mobile,
-                desktop, app)
-                during tech release.</li>
+                to test the functionalities of AEM. Help to create the training materials. Take part in site development
+                projects to
+                visual merchandising and user experience. Help with technical upgrade testing and testing the site
+                (mobile,
+                desktop, app) during tech release.</li>
             <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build strong
-                action plan to meet
-                selling KPI (Using Google analytics, Power BI and Tableau).</li>
+                action plan to meet selling KPI (Using Google analytics, Power BI and Tableau).</li>
         </ul>
 
         <div id="exp3" class="inner-box"></div>
@@ -123,21 +126,20 @@
 
         <ul class="inside">
             <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
-                network. Team
-                member for the panel of ICT curriculum development and exam paper preparation panel for the network from
-                Grade 1 to Grade 13 (20 colleges
-                spread throughout 8 provinces in Sri Lanka).</li>
+                network. Team member for the panel of ICT curriculum development and exam paper preparation panel for
+                the network from Grade 1 to Grade 13 (20 colleges spread throughout 8 provinces in Sri Lanka).</li>
             <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects, including
-                programming languages, databases,
-                project management, web development and MS Office (1000+ students)</li>
+                programming languages, databases, project management, web development and MS Office (1000+ students)
+            </li>
             <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops and
-                multimedia presentations, to facilitate
-                student understanding and engagement</li>
+                multimedia presentations, to facilitate student understanding and engagement</li>
             <li>Provided guidance and support to students in their academic and career development, offering mentorship
                 and advice on IT-related topics (200+ students. Most of them work in the IT related industry).</li>
         </ul>
     </section>
+    <!-- end of the experiance section -->
 
+    <!-- start of the education section -->
     <section id="education">
         <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
         <div id="Edu-box1" class="edu-box">
@@ -190,10 +192,13 @@
             </ul>
         </div>
     </section>
+    <!-- end of the education section -->
 
+    <!-- start of the skills and expertise section -->
     <section id="skills">
         <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
     </section>
+    <!-- end of the skills and expertise section -->
 
     <!-- contact section start -->
     <section id="contact">
@@ -226,9 +231,11 @@
 
         <!-- start personal information -->
         <div class="my-info">
+            <!-- Profile image -->
             <div id="p-img">
                 <img src="/assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="150" height="200">
             </div>
+            <!-- personal information -->
             <h2>Anjalee Kulasinghe</h2>
             <h3>Business and Requirement Analysis | Business Expert | Scrum Master | Project Manager</h3>
             <br>
@@ -236,10 +243,11 @@
             <p>Email: anjaleek@gmail.com</p>
             <br>
 
+            <!-- social media links -->
             <ul class="social-networks">
+                <li><a href="https://www.linkedin.com/in/anjalee-kulasinghe/" target="_blank"><i
+                            class="fa-brands fa-linkedin"></i></a></li>
                 <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
                 <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
             </ul>
         </div>
