Modi: corrected some spelling errors.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Information about education, skills, ability and experience of Anjalee Kulasinghe as a potential employee.">
-    <meta name="keywords" content="anjalee kulasinghe, cv, skill, education, experiance">
+    <meta name="keywords" content="anjalee kulasinghe, cv, skill, education, experience">
     <meta name="author" content="Anjalee Kulasinghe">
 
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -29,7 +29,7 @@
                     <a href="#home" aria-label="Go to the top of the page">Home</a>
                 </li>
                 <li>
-                    <a href="#experiance" aria-label="Go to the experiance section">Experiance</a>
+                    <a href="#experience" aria-label="Go to the experience section">Experience</a>
                 </li>
                 <li>
                     <a href="#education" aria-label="Go to the education section">Education</a>
@@ -68,9 +68,9 @@
     </section>
     <!-- end of the home section -->
 
-    <!-- start of the experiance section -->
-    <section id="experiance">
-        <h1>Experiance <i class="fa-solid fa-briefcase"></i></h1>
+    <!-- start of the experience section -->
+    <section id="experience">
+        <h1>Experience <i class="fa-solid fa-briefcase"></i></h1>
         <div id="exp1" class="inner-box float-left">
             <h2><strong>Expert & Scrum Master</strong></h2>
             <h2>H&M Group - Stockholm, Sweden</h2>
@@ -137,7 +137,7 @@
                 and advice on IT-related topics (200+ students. Most of them work in the IT related industry).</li>
         </ul>
     </section>
-    <!-- end of the experiance section -->
+    <!-- end of the experience section -->
 
     <!-- start of the education section -->
     <section id="education">
