Modi: education section. Remove inner UL

--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
             <ul>
                 <li><strong>Code Institute - Ireland</strong></li>
                 <li>Jul 2023 - Precent</li>
-                <ul>
-                    <li>Diploma: Full Stack Software Development</li>
-                </ul>
+                <li>Diploma: Full Stack Software Development</li>
             </ul>
         </div>
 
@@ -156,9 +154,7 @@
             <ul>
                 <li><strong>Halmstad University - Sweden</strong></li>
                 <li>Mar 2023 - Jun 2023</li>
-                <ul>
-                    <li>Master's (one subject): AI and Data Strategy</li>
-                </ul>
+                <li>Master's (one subject): AI and Data Strategy</li>
             </ul>
         </div>
 
@@ -166,9 +162,7 @@
             <ul>
                 <li><strong>Stockholm University - Sweden</strong></li>
                 <li>Aug 2017 - Precent</li>
-                <ul>
-                    <li>Master's: Computer and System Science</li>
-                </ul>
+                <li>Master in Computer and System Science</li>
             </ul>
         </div>
 
@@ -176,9 +170,7 @@
             <ul>
                 <li><strong>Cardiff Metropolitan University- UK</strong></li>
                 <li>Oct 2012 - Mar 2014</li>
-                <ul>
-                    <li>Master of Business Administration (MBA)</li>
-                </ul>
+                <li>Master of Business Administration (MBA)</li>
             </ul>
         </div>
 
@@ -186,9 +178,7 @@
             <ul>
                 <li><strong>SLIIT- Sri Lanka</strong></li>
                 <li>Jan 2003 - Oct 2007</li>
-                <ul>
-                    <li>Bachelor of Science (B.Sc.) in Information Technology/li>
-                </ul>
+                <li>Bachelor of Science (B.Sc.) in Information Technology/li>
             </ul>
         </div>
     </section>
