Add style to the Education section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- start of the education section -->
     <section id="education">
         <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
-        <div id="Edu-box1" class="edu-box">
+        <div class="edu-box">
             <ul>
                 <li><strong>Code Institute - Ireland</strong></li>
                 <li>Jul 2023 - Precent</li>
@@ -150,7 +150,7 @@
             </ul>
         </div>
 
-        <div id="Edu-box2" class="edu-box">
+        <div class="edu-box">
             <ul>
                 <li><strong>Halmstad University - Sweden</strong></li>
                 <li>Mar 2023 - Jun 2023</li>
@@ -158,7 +158,7 @@
             </ul>
         </div>
 
-        <div id="Edu-box3" class="edu-box">
+        <div class="edu-box">
             <ul>
                 <li><strong>Stockholm University - Sweden</strong></li>
                 <li>Aug 2017 - Precent</li>
@@ -166,7 +166,7 @@
             </ul>
         </div>
 
-        <div id="Edu-box4" class="edu-box">
+        <div class="edu-box">
             <ul>
                 <li><strong>Cardiff Metropolitan University- UK</strong></li>
                 <li>Oct 2012 - Mar 2014</li>
@@ -174,11 +174,11 @@
             </ul>
         </div>
 
-        <div id="Edu-box5" class="edu-box">
+        <div class="edu-box">
             <ul>
                 <li><strong>SLIIT- Sri Lanka</strong></li>
                 <li>Jan 2003 - Oct 2007</li>
-                <li>Bachelor of Science (B.Sc.) in Information Technology/li>
+                <li>Bachelor of Science (B.Sc.) in Information Technology</li>
             </ul>
         </div>
     </section>
