Fix: experience box not appearing for exp 2 & 3

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </nav>
         <!-- end of top navigation -->
     </header>
+<!-- ================================================================================================================================ -->
+    
 
     <!-- start of the home section -->
     <section id="main">
@@ -67,6 +69,8 @@
         </div>
     </section>
     <!-- end of the home section -->
+<!-- ================================================================================================================================ -->
+
 
     <!-- start of the experience section -->
     <section id="experience">
@@ -95,49 +99,53 @@
             </ul>
         </div>
 
-        <div id="exp2" class="inner-box"></div>
-        <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
-        <h2>H&M - Stockholm, Sweden</h2>
-        <h3>December 2018 - May 2021</h3>
-        <hr>
+        <div id="exp2" class="inner-box">
+            <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
+            <h2>H&M - Stockholm, Sweden</h2>
+            <h3>December 2018 - May 2021</h3>
+            <hr>
 
-        <ul class="inside">
-            <li>Secured and optimized the best customer offering by curating site that meets commerciality, customers
-                needs in line with H&M brand. Collaborate and align with the stories and local relevant content to
-                ensure the omni
-                channel experience.</li>
-            <li>Knowledge related to consumer behavior and did the communication targeting the proper customer group via
-                segmentation (what, who and when).</li>
-            <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and supporting
-                to test the functionalities of AEM. Help to create the training materials. Take part in site development
-                projects to
-                visual merchandising and user experience. Help with technical upgrade testing and testing the site
-                (mobile,
-                desktop, app) during tech release.</li>
-            <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build strong
-                action plan to meet selling KPI (Using Google analytics, Power BI and Tableau).</li>
-        </ul>
+            <ul class="inside">
+                <li>Secured and optimized the best customer offering by curating site that meets commerciality, customers
+                    needs in line with H&M brand. Collaborate and align with the stories and local relevant content to
+                    ensure the omni
+                    channel experience.</li>
+                <li>Knowledge related to consumer behavior and did the communication targeting the proper customer group via
+                    segmentation (what, who and when).</li>
+                <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and supporting
+                    to test the functionalities of AEM. Help to create the training materials. Take part in site development
+                    projects to
+                    visual merchandising and user experience. Help with technical upgrade testing and testing the site
+                    (mobile,
+                    desktop, app) during tech release.</li>
+                <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build strong
+                    action plan to meet selling KPI (Using Google analytics, Power BI and Tableau).</li>
+            </ul>
+        </div>
 
-        <div id="exp3" class="inner-box"></div>
-        <h2><strong>Lecture & Head teacher</strong></h2>
-        <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
-        <h3>January 2009 - August 2017</h3>
-        <hr>
+        <div id="exp3" class="inner-box">
+            <h2><strong>Lecture & Head teacher</strong></h2>
+            <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
+            <h3>January 2009 - August 2017</h3>
+            <hr>
 
-        <ul class="inside">
-            <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
-                network. Team member for the panel of ICT curriculum development and exam paper preparation panel for
-                the network from Grade 1 to Grade 13 (20 colleges spread throughout 8 provinces in Sri Lanka).</li>
-            <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects, including
-                programming languages, databases, project management, web development and MS Office (1000+ students)
-            </li>
-            <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops and
-                multimedia presentations, to facilitate student understanding and engagement</li>
-            <li>Provided guidance and support to students in their academic and career development, offering mentorship
-                and advice on IT-related topics (200+ students. Most of them work in the IT related industry).</li>
-        </ul>
+            <ul class="inside">
+                <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
+                    network. Team member for the panel of ICT curriculum development and exam paper preparation panel for
+                    the network from Grade 1 to Grade 13 (20 colleges spread throughout 8 provinces in Sri Lanka).</li>
+                <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects, including
+                    programming languages, databases, project management, web development and MS Office (1000+ students)
+                </li>
+                <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops and
+                    multimedia presentations, to facilitate student understanding and engagement</li>
+                <li>Provided guidance and support to students in their academic and career development, offering mentorship
+                    and advice on IT-related topics (200+ students. Most of them work in the IT related industry).</li>
+            </ul>
+        </div>
     </section>
     <!-- end of the experience section -->
+<!-- ================================================================================================================================ -->
+
 
     <!-- start of the education section -->
     <section id="education">
@@ -183,12 +191,20 @@
         </div>
     </section>
     <!-- end of the education section -->
+<!-- ================================================================================================================================ -->
+
 
     <!-- start of the skills and expertise section -->
     <section id="skills">
         <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
+
+
+
+
     </section>
     <!-- end of the skills and expertise section -->
+<!-- ================================================================================================================================ -->
+
 
     <!-- contact section start -->
     <section id="contact">
@@ -217,7 +233,8 @@
                     <input type="submit" value="Submit" class="send-button">
                     <input type="reset" value="Reset Form">
                 </form>
-            </div> <!--end of left column content (form)-->
+            </div> 
+            <!--end of left column content (form)-->
         
   
             <div class="column">
@@ -240,17 +257,22 @@
                     <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 </ul>
-            </div><!--end of right column comntent (basic info)-->
-        </div><!--end of class contact-me -->
+            </div>
+            <!--end of right column comntent (basic info)-->
+        </div>
+        <!--end of class contact-me -->
 
     </section>
     <!-- contact section end -->
+<!-- ================================================================================================================================ -->
+
 
     <!-- footer section start -->
     <footer class="text-uppercase">
         <p>Copyright © by Anjalee Kulasinghe 2023</p>
     </footer>
     <!-- footer section end -->
+<!-- ================================================================================================================================ -->
 
     <!-- adding font awesome script -->
     <script src="https://kit.fontawesome.com/5f838da39b.js" crossorigin="anonymous"></script>
