--- a/index.html
+++ b/index.html
@@ -198,6 +198,25 @@
     <section id="skills">
         <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
 
+        <div class="skill-box">
+            <h3>Resilience</h3>
+        </div>
+
+        <div class="skill-box">
+            <h3>Communication</h3>
+        </div>
+
+        <div class="skill-box">
+            <h3>Teamwork</h3>
+        </div>
+
+        <div class="skill-box">
+            <h3>Adaptability</h3>
+        </div>
+
+        <div class="skill-box">
+            <h3>Leadership and Coaching</h3>
+        </div>
 
 
 
