Add download cv button and style.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                     <a href="#contact" aria-label="Go to the contact section">Contact</a>
                 </li>
                 <li>
-                    <a href="download.html">Download CV</a>
+                    <a href="/assets/document/Anjalee_Kulasinghe_CV.pdf" download class="button" onclick="alert('Download my full resume')">
+                        <!-- <button type="button" onclick="alert('Download my full resume')">Download CV</button> -->
+                        Download CV
+                    </a>
                 </li>
             </ul>
         </nav>
